--- a/.github/actions/build-deb-package/action.yml
+++ b/.github/actions/build-deb-package/action.yml
@@ -24,10 +24,10 @@ runs:
 
     - name: Run Package Build with Mounted Source
       run: |
-        mkdir -p ${{ env.HOME }}/build
+        mkdir -p "$HOME/build"
         docker run --rm \
-          -v ${{ env.GITHUB_WORKSPACE }}:/workspace/ice \
-          -v ${{ env.HOME }}/build:/workspace/build \
+          -v "$GITHUB_WORKSPACE:/workspace/ice" \
+          -v "$HOME/build:/workspace/build" \
           -e ICE_VERSION=${{ inputs.ice_version }} \
           -e DEB_BUILD_OPTIONS="${{ inputs.deb_build_options }}" \
           --entrypoint /workspace/ice/packaging/dpkg/build-package.sh \
@@ -39,10 +39,10 @@ runs:
       with:
         name: deb-packages-${{ inputs.os }}
         path: |
-          ${{ env.HOME }}/build/*.deb
-          ${{ env.HOME }}/build/*.ddeb
-          ${{ env.HOME }}/build/*.dsc
-          ${{ env.HOME }}/build/*.tar.xz
-          ${{ env.HOME }}/build/*.tar.gz
-          ${{ env.HOME }}/build/*.changes
-          ${{ env.HOME }}/build/*.buildinfo
+          "$HOME/build/*.deb"
+          "$HOME/build/*.ddeb"
+          "$HOME/build/*.dsc"
+          "$HOME/build/*.tar.xz"
+          "$HOME/build/*.tar.gz"
+          "$HOME/build/*.changes"
+          "$HOME/build/*.buildinfo"
