Build deb packages (#3495)

--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       ice_version:
-        description: "The ICE version to build"
+        description: "The Ice version to build"
         required: true
         default: "3.8.0~alpha0"
       deb_build_options:
@@ -21,15 +21,20 @@ jobs:
         include:
           - os: ubuntu-24.04
             runner: ubuntu-24.04
-            dockerfile_path: ice/packaging/dpkg/ubuntu-24.04/Dockerfile
+            dockerfile_path: ice/packaging/dpkg/docker/ubuntu-24.04/Dockerfile
 
           - os: ubuntu-24.04-arm
             runner: ubuntu-24.04-arm
-            dockerfile_path: ice/packaging/dpkg/ubuntu-24.04-arm/Dockerfile
+            dockerfile_path: ice/packaging/dpkg/docker/ubuntu-24.04/Dockerfile
 
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+        with:
+          path: ice
+
       - name: Call Build Debian Package Action
-        uses: ./.github/actions/build-debian-package
+        uses: ./ice/.github/actions/build-deb-package
         with:
           ice_version: ${{ inputs.ice_version }}
           deb_build_options: ${{ inputs.deb_build_options }}
