--- a/.github/actions/build-deb-package/action.yml
+++ b/.github/actions/build-deb-package/action.yml
@@ -1,8 +1,8 @@
-name: "Build Debian Package"
-description: "Builds a Debian source package using a Docker image"
+name: "Build DEB Package"
+description: "Builds a DEB package using a Docker image"
 inputs:
   ice_version:
-    description: "The ICE version to build"
+    description: "The Ice version to build"
     required: true
   deb_build_options:
     description: "DEB_BUILD_OPTIONS for the build"
@@ -18,26 +18,28 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Check out repository
-      uses: actions/checkout@v4
-
     - name: Build Docker Image
-      run: docker build -f ${{ inputs.dockerfile_path }} -t ${{ inputs.docker_image }} .
+      run: docker build --pull -f ${{ inputs.dockerfile_path }} -t ice-deb-package-builder .
       shell: bash
 
     - name: Run Package Build with Mounted Source
       run: |
-        mkdir -p output
         docker run --rm \
-          -v $PWD/ice:/workspace/ice \
-          -v $PWD/output:/workspace/build \
+          -v "$GITHUB_WORKSPACE:/workspace" \
           -e ICE_VERSION=${{ inputs.ice_version }} \
           -e DEB_BUILD_OPTIONS="${{ inputs.deb_build_options }}" \
-          ice-debian-package-builder
+          ice-deb-package-builder /workspace/ice/packaging/dpkg/build-package.sh
       shell: bash
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: debian-packages-${{ inputs.os }}
-        path: output/
+        name: deb-packages-${{ inputs.os }}
+        path: |
+          *.deb
+          *.ddeb
+          *.dsc
+          *.tar.xz
+          *.tar.gz
+          *.changes
+          *.buildinfo
