Install missing tools

--- a/packaging/rpm/docker/rhel9/Dockerfile
+++ b/packaging/rpm/docker/rhel9/Dockerfile
@@ -1,3 +1,5 @@
 FROM registry.access.redhat.com/ubi9
 
-dnf install rpmdevtools -y
+dnf install rpmdevtools make git gcc-c++ glibc-devel libstdc++-devel redhat-rpm-config -y
+
+curl -o /etc/yum.repos.d/zeroc-thirdparty.repo https://builds.testing.zeroc.com/public/dist/unstable/thirdparty/el9/zeroc-thirdparty.repo
