--- a/packaging/rpm/docker/rhel9/Dockerfile
+++ b/packaging/rpm/docker/rhel9/Dockerfile
@@ -1,5 +1,6 @@
 FROM registry.access.redhat.com/ubi9
 
-dnf install rpmdevtools make git gcc-c++ glibc-devel libstdc++-devel redhat-rpm-config -y
+# Enable ZeroC third-party repository for mcpp-devel
+RUN curl -o /etc/yum.repos.d/zeroc-thirdparty.repo https://builds.testing.zeroc.com/public/dist/unstable/thirdparty/el9/zeroc-thirdparty.repo
 
-curl -o /etc/yum.repos.d/zeroc-thirdparty.repo https://builds.testing.zeroc.com/public/dist/unstable/thirdparty/el9/zeroc-thirdparty.repo
+RUN dnf install rpmdevtools make git gcc-c++ glibc-devel libstdc++-devel redhat-rpm-config glibc-static libstdc++-static -y --setopt=multilib_policy=all
