revert arch check

--- a/packaging/dpkg/debian/control
+++ b/packaging/dpkg/debian/control
@@ -8,9 +8,9 @@ Build-Depends: debhelper,
                dh-exec,
                dh-php (>= 0.20),
                dh-python,
-               libbluetooth-dev <!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64>,
+               libbluetooth-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64],
                libbz2-dev,
-               libdbus-1-dev <!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64>,
+               libdbus-1-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64],
                libedit-dev,
                libexpat1-dev,
                liblmdb-dev,
