Pass build_arch to build-rpm-package action

--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -40,3 +40,4 @@ jobs:
           ice_version: ${{ inputs.ice_version }}
           os: ${{ matrix.os }}
           dockerfile_path: ${{ matrix.dockerfile_path }}
+          build_arch: ${{ matrix.build_arch || '' }}
