Gradle build cleanup

--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -1,12 +1,9 @@
-// Copyright (c) ZeroC, Inc.
+# Copyright (c) ZeroC, Inc.
 
-//
-// Version used in JAR files
-//
+# Version used in JAR files
 iceVersion = 3.8.0-alpha.0
 
-//
-// Select an installation base directory. The directory will be created
+# Select an installation base directory. The directory will be created
 // if it does not exist. If this property is not set the default will be
 // used. Default values are:
 //   - Windows: %SystemDrive%\Ice-${iceVersion}
@@ -14,65 +11,39 @@ iceVersion = 3.8.0-alpha.0
 //
 prefix =
 
-//
-// Used to set --release
-//
+# Used to set --release
 targetJavaRelease = 17
 
-//
-// Define debug as true if you want to build with debug information,
-// false otherwise.
-//
+# Define debug as true if you want to build with debug information, false otherwise.
 debug = true
 
-//
-// The Jgoodies third party package versions to use with IceGridGUI builds.
-//
+# The Jgoodies third party package versions to use with IceGridGUI builds.
 jgoodiesLooksVersion = 2.7.0
 jgoodiesFormsVersion = 1.9.0
 
-//
-// Enable this property to build IceGridGUI with JavaFX support. JavaFX is used for rendering the metrics graph.
-//
+# Enable this property to build IceGridGUI with JavaFX support. JavaFX is used for rendering the metrics graph.
 iceGridGuiUseJavaFX = true
 
-//
-// The OpenJFX version to use with IceGridGUI builds
-//
+# The OpenJFX version to use with IceGridGUI builds
 openjfxVersion = 11.0.2
 
-//
-// Set to true if you want IceGridGUI build to create a standalone JAR
-// using proguard.
-//
+# Set to true if you want IceGridGUI build to create a standalone JAR using proguard.
 icegridguiProguard = true
 
-//
-// Windows specific options
-//
+# Windows specific options
 
-//
-// The platform uses by the C++ builds, supported values are `x64` and
-// `Win32`, that is required to locate the slice2java compiler in the
-// platform depend directory.
-//
+# The platform uses by the C++ builds, supported values are `x64` and `Win32`, that is required to locate the
+# slice2java compiler in the platform depend directory.
 cppPlatform =
 
-//
-// The configuration uses by the C++ builds, supported values are `Debug`
-// and `Release`, that is required to locate the slice2java compiler in
-// the configuration depend
-// directory.
-//
+# The configuration uses by the C++ builds, supported values are `Debug` and `Release`, that is required to locate the
+# slice2java compiler in the configuration depend directory.
 cppConfiguration =
 
-//
-// Gradle build properties
-//
+# Gradle build properties
+
 org.gradle.daemon = true
 org.gradle.parallel = true
 
-//
-// Package build properties
-//
+# Package build properties
 DESTDIR =
