--- a/java/test/android/controller/gradle.properties
+++ b/java/test/android/controller/gradle.properties
@@ -3,26 +3,20 @@
 # Version used in JAR files
 iceVersion = 3.8.0-alpha.0
 
-# Set iceHome to location of Ice installation if Ice was installed in a
-# non-standard location. You must use forward slashes in the path, even on
-# Windows.
-#
-# iceHome =
-
 # Gradle build properties
 org.gradle.daemon = true
 org.gradle.configureondemand=false
 
 # Windows specific options
 
-# The platform used by the C++ build. Supported values are `x64` and `Win32`.
-# This is required to locate the slice2java compiler in the platform-dependent
-# directory.
+# The platform used by the C++ build. Supported values are `x64` and `Win32`. This is required to locate the slice2java
+# compiler in the platform-dependent directory.
 cppPlatform = x64
 
-# The configuration used by the C++ build. Supported values are `Debug` and `Release`.
-# This is required to locate the slice2java compiler in the configuration-dependent
-# directory.
+# The configuration used by the C++ build. Supported values are `Debug` and `Release`. This is required to locate the
+#slice2java compiler in the configuration-dependent directory.
 cppConfiguration = Debug
+
+# TODO are this properties still needed?
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
