--- a/packaging/rpm/docker/rhel9/Dockerfile
+++ b/packaging/rpm/docker/rhel9/Dockerfile
@@ -5,7 +5,7 @@ RUN dnf install -y https://zeroc.com/download/ice/3.7/el9/ice-repo-3.7.el9.noarc
     dnf clean all
 
 # Install required build tools and dependencies
-RUN dnf install -y \
+RUN dnf install --setopt=multilib_policy=all -y \
     rpmdevtools \
     make \
     git \
@@ -14,14 +14,17 @@ RUN dnf install -y \
     libstdc++-devel \
     redhat-rpm-config \
     glibc-static \
-    libstdc++-static \
-    --setopt=multilib_policy=all && \
+    libstdc++-static && \
     dnf clean all
 
 # Copy Ice spec file into the container
-COPY ../../ice.spec /usr/src/ice.spec
+COPY packaging/rpm/ice.spec /usr/src/ice.spec
 
-# Install build dependencies from the spec file
-RUN dnf builddep -y --setopt=multilib_policy=all /usr/src/ice.spec && \
-    dnf clean all && \
-    rm /usr/src/ice.spec
+# Install build dependencies. Do not use dnf builddep as it doesn't obey multilib_policy=all.
+RUN rpmspec --parse /usr/src/ice.spec 2>/dev/null | \
+    grep '^BuildRequires:' | \
+    sed -E 's/BuildRequires:\s*//' | \
+    tr ',' '\n' | awk '{print $1}' | sort -u > /tmp/dependencies.txt && \
+    dnf install --setopt=multilib_policy=all -y $(cat /tmp/dependencies.txt) && \
+    rm -f /tmp/dependencies.txt /usr/src/ice.spec && \
+    dnf clean all
