--- a/.github/actions/build-rpm-package/action.yml
+++ b/.github/actions/build-rpm-package/action.yml
@@ -7,10 +7,9 @@ inputs:
   os:
     description: "The target OS (e.g., rhel9, rhel9-arm64, rhel9-x86)"
     required: true
-  build_arch:
-    description: "The build architecture for cross multillib builds (e.g., i686)"
-    required: false
-    default: ""
+  target_arch:
+    description: "The target build architecture uses as a parameter for rpmbuild --target"
+    required: true
   dockerfile_path:
     description: "Path to the Dockerfile"
     required: true
@@ -19,26 +18,21 @@ runs:
   using: "composite"
   steps:
     - name: Build Docker Image
-      run: docker build --pull -f ${{ inputs.dockerfile_path }} -t ice-rpm-package-builder .
+      run: docker build --pull -f ${{ inputs.dockerfile_path }} -t ice-rpm-package-builder "$GITHUB_WORKSPACE/ice"
       shell: bash
 
     - name: Run Package Build with Mounted Source
       run: |
-        if [[ -n "${{ inputs.build_arch }}" ]]; then
-          docker run --rm \
-            -v "$GITHUB_WORKSPACE:/workspace" \
-            -e ICE_VERSION="${{ inputs.ice_version }}" \
-            ice-rpm-package-builder bash -c "setarch ${{ inputs.build_arch }} /workspace/ice/packaging/rpm/build-package.sh"
-        else
-          docker run --rm \
-            -v "$GITHUB_WORKSPACE:/workspace" \
-            -e ICE_VERSION="${{ inputs.ice_version }}" \
-            ice-rpm-package-builder /workspace/ice/packaging/rpm/build-package.sh
-        fi
+        docker run --rm \
+          -v "$GITHUB_WORKSPACE:/workspace" \
+          -e ICE_VERSION="${{ inputs.ice_version }}" \
+          -e TARGET_ARCH="${{ inputs.target_arch }}" \
+          ice-rpm-package-builder /workspace/ice/packaging/rpm/build-package.sh
       shell: bash
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: rpm-packages-${{ inputs.os }}
-        path: *.rpm
+        path: |
+          *.rpm
