--- a/.github/workflows/build-npm-packages.yml
+++ b/.github/workflows/build-npm-packages.yml
@@ -104,8 +104,8 @@ jobs:
         working-directory: ice/js
 
       - name: Update Version
-        run: |
-          sed -i 's/"version":.*/"version": "${{ inputs.ice_version }}"/' package.json
+        working-directory: ice/js
+        run: npm version ${{ inputs.ice_version }}
         if: inputs.ice_version != ''
 
       - name: Pack npm
@@ -119,10 +119,11 @@ jobs:
           path: ice/js/*.tgz
 
       - name: Publish NPM Packages
+        working-directory: ice/js
         run: |
           echo "//${{ inputs.registry_url }}/:_auth=\${NPM_AUTH_TOKEN}" > ~/.npmrc
           echo "always-auth=true" >> ~/.npmrc
-          npm publish ice/js/*.tgz --registry ${{ inputs.registry_url }}
+          npm publish *.tgz --registry ${{ inputs.registry_url }}
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
         if: inputs.registry_url != ''
