--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -31,6 +31,7 @@ runs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: "3.3"
+      if: runner.os != 'Windows'
 
     - uses: actions/setup-node@v4
       with:
