--- a/.github/workflows/build-dotnet-packages.yml
+++ b/.github/workflows/build-dotnet-packages.yml
@@ -90,9 +90,10 @@ jobs:
         run: nuget restore cpp/msbuild/ice.sln
 
       - name: Pack .NET Packages
-        run: dotnet msbuild csharp/msbuild/ice.proj /t:Pack /p:Configuration=Release /p:Platform=x64
+        run: dotnet msbuild csharp\msbuild\ice.proj /t:Pack /p:Configuration=Release /p:Platform=x64
         env:
-          VERSION: ${{ inputs.ice_version || '' }}
+          Version: ${{ inputs.ice_version || '' }}
+          PackageVersion: ${{ inputs.ice_version || '' }}
 
       - name: Upload NuGet Packages
         uses: actions/upload-artifact@v4
@@ -104,5 +105,5 @@ jobs:
 
       - name: Publish NuGet Packages
         run: |
-          dotnet nuget push csharp/msbuild/zeroc.ice.net/*.nupkg --source ${{ inputs.source_url }} --api-key ${{ secrets.NUGET_API_KEY }}
+          dotnet nuget push csharp\msbuild\zeroc.ice.net\*.nupkg --source ${{ inputs.source_url }} --api-key ${{ secrets.NUGET_API_KEY }}
         if: inputs.source_url != ''
