--- a/.github/workflows/build-maven-packages.yml
+++ b/.github/workflows/build-maven-packages.yml
@@ -25,7 +25,7 @@ on:
         type: string
 
 jobs:
-  build-slice-compilers:
+  build-maven-packages:
     runs-on: ubuntu-24.04
 
     steps:
@@ -56,6 +56,7 @@ jobs:
 
       - name: Publish Maven Packages
         run: ./gradlew publish
+        working-directory: java
         env:
           MAVEN_REPOSITORY: ${{ inputs.repository_url }}
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
