--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Build MSI
         run: dotnet build -c Release -p:Platform=x64
         working-directory: packaging/msi
+        env:
+          VCInstallDir: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC"
 
       - name: Upload NuGet Packages
         uses: actions/upload-artifact@v4
