--- a/.github/workflows/build-gem-packages.yml
+++ b/.github/workflows/build-gem-packages.yml
@@ -4,10 +4,10 @@ on:
   workflow_call:
     inputs:
       ice_version:
-        required: true
+        required: false
         type: string
       repository_url:
-        required: true
+        required: false
         type: string
     secrets:
       REPOSITORY_USERNAME:
