--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -26,6 +26,7 @@ jobs:
         run: dotnet build -c Release -p:Platform=x64
         working-directory: packaging/msi
         env:
+          # TODO compute this variable see issue #3558
           VCInstallDir: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC"
 
       - name: Upload NuGet Packages
