--- a/.github/workflows/build-gem-packages.yml
+++ b/.github/workflows/build-gem-packages.yml
@@ -51,15 +51,18 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: gem-packages
-          path: ruby/zeroc-ice-${{ inputs.ice_version }}.gem
+          path: ruby/zeroc-ice-*.gem
 
       - name: Publish GEM Packages
         run: |
            curl -u "${REPOSITORY_USERNAME}:${REPOSITORY_PASSWORD}" \
-             --upload-file ruby/zeroc-ice-${{ inputs.ice_version }}.gem \
+             --upload-file ruby/zeroc-ice-*.gem \
              --output /dev/null \
              --silent \
              --fail \
              --show-error \
-             ${{ inputs.repository_url }} || { echo "Upload zeroc-ice-${{ inputs.ice_version }}.gem failed"; exit 1; }
+             ${{ inputs.repository_url }} || { echo "Upload zeroc-ice-*.gem failed"; exit 1; }
         if: inputs.repository_url != ''
+        env:
+          REPOSITORY_USERNAME: ${{ secrets.REPOSITORY_USERNAME }}
+          REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
