Fix Python distribution upload

--- a/.github/workflows/build-pip-packages.yml
+++ b/.github/workflows/build-pip-packages.yml
@@ -78,10 +78,10 @@ jobs:
           mkdir -p ${{ github.workspace }}/dist
           cp -r artifacts/pip-packages-windows-latest/*.whl ${{ github.workspace }}/dist
           cp -r artifacts/pip-packages-macos-latest/*.whl ${{ github.workspace }}/dist
-          cp -r artifacts/pip-packages-macos-latest/*.tar.gz ${{ github.workspace }}/dist
+          cp -r artifacts/pip-packages-macos-latest/zeroc-ice-*.tar.gz ${{ github.workspace }}/dist
 
           python3 -m pip install twine --user
-          python3 -m twine upload --repository-url ${{ inputs.repository_url }} python/dist/zeroc-ice-*.whl python/dist/zeroc-ice-*.tar.gz
+          python3 -m twine upload --repository-url ${{ inputs.repository_url }} ${{ github.workspace }}/dist/*
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
