Nightly Workflow Fixes

--- a/.github/actions/build-rpm-package/action.yml
+++ b/.github/actions/build-rpm-package/action.yml
@@ -33,7 +33,7 @@ runs:
       with:
         name: rpm-packages-${{ inputs.distribution }}-${{ inputs.arch }}
         path: |
-          *.rpm
+          build/RPMS/*
 
     - name: Publish RPM Packages
       run: |
