--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
 
-      - name: Build C++ NuGet Packages
+      # TODO Download from NuGet
+      - name: Build C++ Binaries
         run: msbuild /m ice.proj /p:Platform=x64 /p:Configuration=Release
         working-directory: cpp/msbuild
 
@@ -29,9 +30,9 @@ jobs:
           # TODO compute this variable see issue #3558
           VCInstallDir: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC"
 
-      - name: Upload NuGet Packages
+      - name: Upload MSI
         uses: actions/upload-artifact@v4
         with:
-          name: windows-msi-and-nuget-packages
+          name: windows-msi
           path: |
             packaging/msi/bin/x64/Release/*.msi
