--- a/cpp/msbuild/ice.nuget.targets
+++ b/cpp/msbuild/ice.nuget.targets
@@ -6,8 +6,7 @@
 
     <!-- Dynamic libraries and import libraries -->
     <ItemGroup>
-        <Libraries Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\*.dll"
-                   Exclude="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\glacier2cryptpermissionsverifier*d.dll"/>
+        <Libraries Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\*.dll" />
 
         <ImportLibraries Include="$(IceSrcRootDir)lib\$(Platform)\$(Configuration)\*.lib"
                          Exclude="$(IceSrcRootDir)lib\$(Platform)\$(Configuration)\glacier2cryptpermissionsverifier*.lib;
@@ -17,26 +16,16 @@
                                   $(IceSrcRootDir)lib\$(Platform)\$(Configuration)\slice*.lib"/>
     </ItemGroup>
 
-    <ItemGroup Condition="'$(DefaultBuild)' != '$(Platform)|$(Configuration)' and '$(Configuration)' == 'Debug'">
-        <!--The below executables are only included for the default platform -->
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\dsnode.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\glacier2router.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\iceboxadmin.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\icebridge.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\icegridadmin.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\icegriddb.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\iceserviceinstall.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\icestormadmin.exe" />
-        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\icestormdb.exe" />
-    </ItemGroup>
-
     <ItemGroup>
-        <!-- The Slice compilers are includes as Tools -->
-        <Tools Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\slice2*.exe" />
+        <!-- The Slice for C++, and Ice to Slice compilers are includes as Tools -->
+        <Tools Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\slice2cpp.exe" />
         <Tools Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\ice2slice.exe" />
-        <ExecutablesExclude Include="@(Tools)"/>
 
-        <!-- The executables are included (all .exe not in the excludes) -->
+        <!-- The executables to exclude from the package bin directory -->
+        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\slice2*.exe" />
+        <ExecutablesExclude Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\ice2slice.exe" />
+
+        <!-- The included executables (all .exe not in the excludes) -->
         <Executables Include="$(IceSrcRootDir)bin\$(Platform)\$(Configuration)\*.exe" Exclude="@(ExecutablesExclude)"/>
     </ItemGroup>
 
