Add .npmignore to override what gets included

--- a/.github/workflows/build-npm-packages.yml
+++ b/.github/workflows/build-npm-packages.yml
@@ -109,9 +109,7 @@ jobs:
         if: inputs.ice_version != ''
 
       - name: Pack npm
-        run: |
-          make srcs
-          npm pack
+        run: npm pack
         working-directory: ice/js
 
       - name: Upload NPM Packages
