Add slice2js to NPM bin

--- a/js/package.json
+++ b/js/package.json
@@ -18,6 +18,9 @@
         ".": "./src/index.js",
         "./slice2js": "./bin/slice2js.js"
     },
+    "bin":{
+        "slice2js": "./bin/slice2js.js"
+    },
     "types": "src/index.d.ts",
     "browserslist": "> 0.25%, not dead",
     "devDependencies": {
