Implement dispatch exceptions in C++

--- a/cpp/src/Ice/msbuild/ice/ice.vcxproj.filters
+++ b/cpp/src/Ice/msbuild/ice/ice.vcxproj.filters
@@ -409,6 +409,9 @@
     <ClCompile Include="..\..\RequestHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\ReplyStatus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\RetryQueue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
